tests/unit/compile/cases/syntax-errors/04.text-php-tag-short.t
foo <?= $secret ?>
---- THROW% ----
Unexpected <InlineText "?= $secret ?">; expected: <SLASH>, <HtmlNameWord> near `?= $secret ?>` in `%s` at line 1
